# sht-colour

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  lib_tests.rs  rgb.rs  tests.rs
src/rgb/: mod.rs  tests.rs
src/sht/: mod.rs  parser.rs  tests.rs
