[package]
name = "sht-colour"
version = "0.1.0"
description = "Conversion tools for SHT colours."
authors = ["IFcoltransG <47414286+IFcoltransG@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/IFcoltransG/sht-colour"
readme = "README.md"
license = "MIT"
keywords = ["color", "rgb", "colour"]
categories = ["encoding", "multimedia::images", "graphics", "parser-implementations"]

[dependencies]
num = "0.4"
nom = "7.0"
rgb = "0.8"
